<resources>
    <string name="app_name">RoadBuddy</string>
    <string name="login">Login</string>
    <string name="enter_email">Email</string>
    <string name="enter_your_password">Password</string>
    <string name="enter_your_username">Username</string>
    <string name="enter_your_name">Name</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome to RoadBuddy</string>
    <string name="not_a_member_register_here">Not a member ? Register</string>
    <string name="nav_open">Nav open</string>
    <string name="nav_close">Nav close</string>
    <string name="string_entry">Welcome to RoadBuddy</string>
    <string name="confirm">Confirm</string>
    <string name="departure">Departure</string>
    <string name="driver">Driver:</string>
    <string name="destination">Destination</string>
    <string name="pick_date">Date</string>
    <string name="choose_time">Time</string>
    <string name="price">PRICE</string>
    <string name="seats">SEATS</string>
    <string name="trip_created_success">Trip created successfully</string>
    <string name="error">An error occurred</string>
    <string name="next">Next</string>
    <string name="try_again">Try again</string>
    <string name="here">HERE</string>
    <string name="enter_credentials">Please enter your crendentials</string>
    <string name="from">From:</string>
    <string name="error_search_view">There was an error opening the search view</string>
    <string name="fill_fields">Fill all the fields to complete a trip</string>
    <string name="to">To:</string>
    <string name="day">Day:</string>
    <string name="time">Time:</string>
    <string name="price_show">Price:</string>
    <string name="avaiable_seats">Avaiable Seats:</string>
    <string name="reservation_confirmed">Trip confirmed !</string>
    <string name="upload_image">Please Upload an Image</string>
    <string name="select_picture">Select Picture</string>
</resources>